--- a/webclient/app/views/layouts/main.rhtml
+++ b/webclient/app/views/layouts/main.rhtml
@@ -16,6 +16,8 @@
   <script type="text/javascript" charset="utf-8" src="/javascripts/plugin/jqplot.pieRenderer.js"></script>
   <script type="text/javascript" charset="utf-8" src="/inc/jquery.ui.custom.js"></script>
 
+  <script type="text/javascript" charset="utf-8" src="/javascripts/script.js"></script>
+
   <!--<script type="text/javascript" language="javascript" charset="utf-8" src="/inc/jquery.jqModal.js"></script>
   <script type="text/javascript" language="javascript" charset="utf-8" src="/inc/jquery.ui.core.js"></script>
   <script type="text/javascript" language="javascript" charset="utf-8" src="/inc/jquery.ui.tabs.js"></script>-->
@@ -30,7 +32,7 @@
     
     <div id="header">
       
-      <img src="/images/geckohead-grey.png" alt="SUSE" />
+      <img src="/images/geckohead-green.png" alt="SUSE" />
       
       <h1>My Appliance</h1>
 
@@ -47,8 +49,8 @@
 
         <ul>
           <li><strong><%=_("Connected Host")%></strong></li>
-          <li><strong><%=_("Name:")%></strong> <%= host.name -%></li>
-          <li><strong><%=_("User:")%></strong> <%= user -%></li>
+          <li><%=_("Name:")%> <strong><%= host.name -%></strong></li>
+          <li><%=_("User:")%> <strong><%= user -%></strong></li>
           <li><em><%= link_to _("Logout"), '/logout' %></em></li>
         </ul>
 
