--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -156,7 +156,7 @@ img {
       display: block;
       padding: 1em 5px 0;
       margin: 0 5px;
-      border: 2px dashed transparent;
+      border: 2px solid transparent;
       height: 8em;
     }
     .list-row div a:hover {
