fix last changes that breaks AJAX stuff, improve indenting

--- a/plugins/patch_updates/app/views/patch_updates/_patch_summary.html.erb
+++ b/plugins/patch_updates/app/views/patch_updates/_patch_summary.html.erb
@@ -1,4 +1,4 @@
-<div>
+<div class="status_patches">
   <% unless patch %>
     <img src="/images/button_warning.png" alt="warning icon" />
     <%= _("Error occur during loading patch information.") %>
