--- a/webclient/public/stylesheets/yast.css
+++ b/webclient/public/stylesheets/yast.css
@@ -37,13 +37,8 @@
  color: red;
 }
 
-#status_patches_icon {
+#status_patches {
   margin-left: 2em;
-}
-
-#status_patches_msg {
-  margin-left: 5em; 
-  margin-top: -1.5em;
 }
 
 #status_health_icon  {
