Made some basic styling for login-form

--- a/webclient/app/views/hosts/index.html.erb
+++ b/webclient/app/views/hosts/index.html.erb
@@ -8,13 +8,13 @@
     <li>
       <ul>
         <li>
-          <%= link_to host.name, new_session_path(:hostid => "#{host.id}") %>
+          <strong><%= link_to host.name, new_session_path(:hostid => "#{host.id}") %></strong>
         </li>
         <li>
-          <%=h host.url %>
+          <span><%=h host.url %></span>
         </li>
         <li>
-          <%=h host.description %>
+          <span><%=h host.description %></span>
         </li>
         <li>
           <%= link_to image_tag("/images/edit-icon.gif", :alt =>  "edit"),
