--- a/plugins/systemtime/app/views/system_time/index.rhtml
+++ b/plugins/systemtime/app/views/system_time/index.rhtml
@@ -1,116 +1,118 @@
 <% if @permissions %>
-<%= javascript_include_tag "nogray_time_picker" %>
-<% javascript_tag do -%>
-  $(document).ready( function() {
-  $(".datepicker").datepicker( { dateFormat: 'dd/mm/yy'} );
-  });
-<% end -%>
+  <%= javascript_include_tag "nogray_time_picker" %>
+  <% javascript_tag do -%>
+    $(document).ready( function() {
+    $(".datepicker").datepicker( { dateFormat: 'dd/mm/yy'} );
+    });
+  <% end -%>
 
 
 
-<%= javascript_include_tag :defaults %>
-<% disabled = ! @permissions[:write] %>
+  <%= javascript_include_tag :defaults %>
+  <% disabled = ! @permissions[:write] %>
 
 
 
-<h2><%=_("Configure timezone")%></h2>
-<% form_tag '/system_time/update_timezone', :class => 'container' do %>
-  <table summary="<%= _("Table for settings timezone for target machine.") %>">
-    <tr>
-
-      <td>
-        <label for="region">
-          <%=_("Region:")%>
-        </label>
-      </td>
-      <% name = @region.name rescue ""
-         @valid = Array.new unless @valid -%>
-      <td><%= select_tag "region", options_for_select(@valid, name), :disabled => disabled %></td>
-      
-    </tr>
-    <tr>
-
-
-      <td>
-        <label for="timezone">
-          <%=_("Timezone:")%>
-        </label>
-      </td>
-
-      <td id="timezones">
-        <%= render(:partial => 'timezones',
-          :locals => {:region => @region, :default => @systemtime.timezone,
-            :disabled => disabled})  %>
-      </td>
-    </tr>
-
-    <% if @systemtime.utcstatus != "UTConly" %>
-
+  <h2><%=_("Configure timezone")%></h2>
+  <% form_tag '/system_time/update_timezone', :class => 'container' do %>
+    <table summary="<%= _("Table for settings timezone for target machine.") %>">
       <tr>
+
         <td>
-          <label for="utc">
-            <%=_("Hardware clock is set to UTC")%>
+          <label for="region">
+            <%=_("Region:")%>
           </label>
         </td>
+        <% #region is always non-nil as it is prerequisites which throws exception
+        %>
         <td>
-          <% #don't use check_box helper as it generate also hidden opposite value
-          %>
-          <input type="checkbox" name="utc" id="utc" value="true"
-          <%= @systemtime.utcstatus == "UTC" ? "checked" : "" %>
-                 <%= "disabled=\"disabled\"" if disabled %> />
+          <%= select_tag "region", options_for_select(@valid, @region.name), :disabled => disabled %>
+        </td>
+
+      </tr>
+      <tr>
+
+
+        <td>
+          <label for="timezone">
+            <%=_("Timezone:")%>
+          </label>
+        </td>
+
+        <td id="timezones">
+          <%= render(:partial => 'timezones',
+            :locals => {:region => @region, :default => @timezone,
+              :disabled => disabled})  %>
         </td>
       </tr>
 
-    <% end %>
+      <% if @utcstatus != "UTConly" %>
 
-    <tr>
-      <td/>
-      <td>
-        <%= submit_tag _("Save"), :onclick=>"Element.show('progress')", :disabled=> disabled, :class => 'button' -%>
-      </td>
-    </tr>
-  </table>
-<% end %>
-<h2><%=_("Manually configure time")%></h2>
-<% form_tag '/system_time/update_time', :class => 'container' do %>
-  <table summary="<%= _("Manual time configuration table, where user selects data and time for target machine") %>">
-    <tr>
-      <td>
-        <label for="date_date">
-          <%= _("Date") %>
-        </label>
-      </td>
-      <td>
-        <%= text_field "date","date", :class => :datepicker,
-          :disabled=> disabled, :value => @date
+        <tr>
+          <td>
+            <label for="utc">
+              <%=_("Hardware clock is set to UTC")%>
+            </label>
+          </td>
+          <td>
+            <% #don't use check_box helper as it generate also hidden opposite value
+            %>
+            <input type="checkbox" name="utc" id="utc" value="true"
+            <%= @utcstatus == "UTC" ? "checked" : "" %>
+                   <%= "disabled=\"disabled\"" if disabled %> />
+          </td>
+        </tr>
+
+      <% end %>
+
+      <tr>
+        <td/>
+        <td>
+          <%= submit_tag _("Save"), :onclick=>"Element.show('progress')", :disabled=> disabled, :class => 'button' -%>
+        </td>
+      </tr>
+    </table>
+  <% end %>
+  <h2><%=_("Manually configure time")%></h2>
+  <% form_tag '/system_time/update_time', :class => 'container' do %>
+    <table summary="<%= _("Manual time configuration table, where user selects data and time for target machine") %>">
+      <tr>
+        <td>
+          <label for="date_date">
+            <%= _("Date") %>
+          </label>
+        </td>
+        <td>
+          <%= text_field "date","date", :class => :datepicker,
+            :disabled=> disabled, :value => @date
         %>
-      </td>
-    </tr>
+        </td>
+      </tr>
 
-    <tr>
-      <td>
-        <label for="currenttime">
-          <%= _("Time") %>
-        </label>
-      </td>
-      <td><%= text_field_tag "currenttime", @time, :disabled=> disabled %></td>
-    </tr>
+      <tr>
+        <td>
+          <label for="currenttime">
+            <%= _("Time") %>
+          </label>
+        </td>
+        <td><%= text_field_tag "currenttime", @time, :disabled=> disabled %></td>
+      </tr>
 
-    <tr>
-      <td></td>
-      <td>
+      <tr>
+        <td></td>
+        <td>
 
-        <%= submit_tag _("Save"), :onclick=>"Element.show('progress')",
-          :disabled=> disabled, :class => 'button' -%>
+          <%= submit_tag _("Save"), :onclick=>"Element.show('progress')",
+            :disabled=> disabled, :class => 'button' -%>
 
-      </td>
-    </tr>
-  </table>
+        </td>
+      </tr>
+    </table>
+  <% end %>
+
+  <%= observe_field(:region,
+    :frequency => 0.25,
+    :update => :timezones,
+    :url => { :action => :timezones_for_region },
+    :with => "'disabled=' + "+ (disabled ? "true":"false")+" + '&value=' +value") %>
 <% end %>
-
-<%= observe_field(:region,
-        :frequency => 0.25,
-        :update => :timezones,
-        :url => { :action => :timezones_for_region },
-        :with => "'disabled=' + "+ (disabled ? "true":"false")+" + '&value=' +value") %>
- <% end %>
