--- a/plugins/status/app/views/status/edit.html.erb
+++ b/plugins/status/app/views/status/edit.html.erb
@@ -18,7 +18,7 @@
 
       <% if  @limits_list.has_key?(limit_key)  %>
         <td>
-        <input name=<%= limit_key+"/value" %> type="text" size="10" maxlength="15" value=<%= @limits[limit_key]["value"] %>>
+        <input name=<%= limit_key+"/value" %> type="text" size="10" maxlength="15" value=<%= @limits_list[limit_key][0][1] %>>
         </td>
         <td>
         <input type="checkbox" name= <%= limit_key+"/maximum" %> id=<%= limit_key+"/maximum" %> value="true"
@@ -38,7 +38,7 @@
     <% end %>
   <% end %>
 </table>
-<%= submit_tag _("Save"), :onclick=>"Element.show('progress')", :disabled=> disabled, :class => 'button' -%>
+<%= submit_tag _("Save"), :disabled=> disabled, :class => 'button' -%>
 <% end -%>
 
 
