Clear flash message after display
Huh, this should be handled by Rails somehow. For now, I consider it a
workaround.

--- a/webclient/app/views/layouts/main.rhtml
+++ b/webclient/app/views/layouts/main.rhtml
@@ -60,6 +60,7 @@
       <% [:error, :warning, :notice, :message].each do |name| %>
         <% if flash[name] %>
           <%= "<div class=\"notifications\" id=\"#{name}\">#{flash[name]}</div>" %>
+	  <% flash.delete name -%>
         <% end %>
       <% end %>
 
