--- a/webclient/app/views/layouts/main.rhtml
+++ b/webclient/app/views/layouts/main.rhtml
@@ -16,7 +16,7 @@
   <script type="text/javascript" charset="utf-8" src="/javascripts/plugin/jqplot.pieRenderer.js"></script>
   <script type="text/javascript" charset="utf-8" src="/inc/jquery.ui.custom.js"></script>
   
-  <script type="text/javascript" charset="utf-8" src="/javascripts/jQuery.dPassword.js"></script>
+  <!--<script type="text/javascript" charset="utf-8" src="/javascripts/jQuery.dPassword.js"></script>-->
   <script type="text/javascript" charset="utf-8" src="/javascripts/script.js"></script>
 
   <!--<script type="text/javascript" language="javascript" charset="utf-8" src="/inc/jquery.jqModal.js"></script>
