--- a/webclient/app/views/layouts/main.rhtml
+++ b/webclient/app/views/layouts/main.rhtml
@@ -69,11 +69,7 @@
         </div>
 
       <%= @content_for_layout %>
-
     </div>
 
     <div id="footer" class="">
-      <div class="copy">&copy; 2009 Novell, Inc.</div>
-    </div>
-  </body>
-</html>
+      <div class="copy">&copy; 2009 Novell, Inc.</di
