Make 'cancel' a button-like link

--- a/webclient/app/views/hosts/new.html.erb
+++ b/webclient/app/views/hosts/new.html.erb
@@ -46,4 +46,4 @@ $(document).ready(function() {
   <p><%= f.submit _("Create") %></p>
   </div>
 <% end %>
-<%= button_to _('Cancel'), hosts_path, :class => "button" %>
+<%= link_to _('Cancel'), hosts_path, :class => "button" %>
