Removed jQuery Plugin

--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -1,8 +1,8 @@
 /* == Used Colours ===========================================================
 Title               Hex-Code    Used-for Examples
 ------------------------------------------------------------------------------
-Medium Blue:        #06c        Links Hover
-Medium Green:       #6c0
+Blue:        #06c        Links Hover
+Green:       #6c0
 Dark Grey:          #333        Font
 Medium Grey:        #666        Header Font
 Soft Light Grey:    #0072ba     Header BG
