--- a/webclient/app/views/hosts/new.html.erb
+++ b/webclient/app/views/hosts/new.html.erb
@@ -1,49 +1,54 @@
-<h1><%=_("New WebYaST Host")%></h1>
+<div class="dialoge-wrapper">
+  <div class="dialoge-sub-wrapper">
+  
+  <h2><%=_("New WebYaST Host")%></h2>
 
-<script type="text/javascript">
-$(document).ready(function() {
-  $("#new_host").validate({
-    rules: {
-      "host[name]" : { required : true },
-      "host[url]": {
-        required: true,
-        remote: "/validate_uri"
-      }
-    },
-    // set this class to error-labels to indicate valid fields 
-    success: function(label) { 
-      // set   as text for IE 
-      label.html(" ").addClass("checked"); 
-    } 
-  });
-});
-</script>
+    <script type="text/javascript">
+    $(document).ready(function() {
+      $("#new_host").validate({
+        rules: {
+          "host[name]" : { required : true },
+          "host[url]": {
+            required: true,
+            remote: "/validate_uri"
+          }
+        },
+        // set this class to error-labels to indicate valid fields 
+        success: function(label) { 
+          // set   as text for IE 
+          label.html(" ").addClass("checked"); 
+        } 
+      });
+    });
+    </script>
 
-<% form_for(@host) do |f| %>
-  <%= f.error_messages %>
+    <% form_for(@host) do |f| %>
+      <%= f.error_messages %>
 
-  <div class="table">
-    <img src="/images/bg-th-left.gif" width="8" height="7" class="left" />
-    <img src="/images/bg-th-right.gif" width="7" height="7" class="right" />
-    <table class="listing form" cellpadding="0" cellspacing="0">
-    <tr>
- 	<th class="full" colspan="2"><%=_("WebYaST-Host")%></th>
-    </tr>
-    <!-- FIXME: move to a partial and share with 'edit' -->
-    <tr>
-	<td class="first" width="20"><strong><%=_("Name")%></strong></td>
-	<td class="last"><%= f.text_field :name, :class => "required" %></td>
-    </tr>
-    <tr>
-	<td class="first" width="30"><strong><%=_("Url")%></strong></td>
-	<td class="last"><%= f.text_field :url %></td>
-    </tr>
-    <tr class="bg">
-	<td class="first"><strong><%=_("Description")%></strong></td>
-	<td class="last"><%= f.text_field :description %></td>
-    </tr>
-    </table>
-  <p><%= f.submit _("Create") %></p>
+      <div class="table">
+
+        <p>
+          <label for="host_name"><%=_("Name")%></label>
+          <%= f.text_field :name, :class => "required" %>
+        </p>
+
+        <p>
+          <label for="host_url"><%=_("Url")%></label>
+          <%= f.text_field :url %>
+        </p>
+
+        <p>
+          <label for="host_description"><%=_("Description")%></label>
+          <%= f.text_field :description %>
+        </p>
+
+        <p class="dialogue-footer">
+          <%= link_to _('Cancel'), hosts_path, :class => "button" %>
+          <%= f.submit _("Create"), :class => "button" %>
+        </p>
+      </div>
+    <% end %>
+
   </div>
-<% end %>
-<%= link_to _('Cancel'), hosts_path, :class => "button" %>
+</div>
+
