chanded colour of .notification

--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -284,8 +284,10 @@ ul.list-2level-inline {
 
 .notifications {
   color: #06c;
+  color: #f90;
   margin: 1em 0;
   text-align: center;
+  text-shadow: 0 1px 1px #ccc;
 }
 
 /* == Form Styles ======================================================= */
